# Prusa-Core-One._But-Can-it-run-Doom

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: arm-toolchain.cmake
docs/: FLASHING.md  HARDWARE.md  PLAN.md
linker/: stm32f427.ld  stm32f427_boot.ld
src/: board.h  gpio.c  gpio.h  ili9488.c  ili9488.h  input.c  input.h  main.c  spi.c  spi.h  startup_stm32f427.c  syscalls.c  system.c  w25q.c  w25q.h
src/doom/: doom_entry.c  fixed_stub.c  fx.c  fx.h  i_backend_stm32.c  sound_stub.c  tmc_music.c  tmc_music.h  wad_stub.c
tools/: extract_music.py  make_bbf.sh  reduce_doom.py  reduce_wad.py
